--- a/plugin.xml
+++ b/plugin.xml
@@ -89,11 +89,10 @@
       </feature>
 
 
-      <universal-links>
-    <ios-team-id value="2WDTH99JC5" />
     <host name="www.grupobancolombia.com" scheme="https">
-        <path url="wps/portal/personas/*" />
+        <path url="/*" />
     </host>
+    <host name="www.grupobancolombia.com" scheme="https"/>
     </universal-links>
 
     <preference name="AndroidLaunchMode" value="singleInstance" />
